# polymarket-cabinet

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  polymarket-cabinet-prompt.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_users_table.py  0002_add_markets_and_price_snapshots.py  0003_add_positions.py  0004_add_orders.py  0005_add_missing_columns.py  0006_add_orders_position_id.py  0007_add_user_auto_sl_percent.py  0008_add_market_event_slug.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  markets.py  orders.py  portfolio.py  strategies.py  trading.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: base.py  market.py  order.py  position.py  user.py
backend/app/db/: base.py  session.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  market.py  order.py  position.py  price_snapshot.py  user.py
backend/app/schemas/: auth.py  market.py  order.py  position.py  strategy.py  trading.py
backend/app/services/: arbitrage_service.py  market_service.py  order_service.py  polymarket_client.py  portfolio_service.py  scheduler_service.py  sl_ws_monitor.py  trading_service.py
backend/app/utils/: redis_client.py
backend/tests/: conftest.py
frontend/: Dockerfile  Dockerfile.prod  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  (+1 more)
(+75 files in other folders)
